--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@babel/core": "7.12.3",
+    "@babel/core": "^7.12.3",
     "@pmmmwh/react-refresh-webpack-plugin": "0.4.2",
     "@svgr/webpack": "5.4.0",
     "@testing-library/jest-dom": "^5.11.4",
@@ -15,11 +15,12 @@
     "@types/react-dom": "^16.9.8",
     "@typescript-eslint/eslint-plugin": "^4.5.0",
     "@typescript-eslint/parser": "^4.5.0",
-    "@xylink/xy-upload-sdk": "0.0.1-beta.5",
+    "@xylink/xy-upload-sdk": "^0.0.1-beta.1",
     "antd": "^4.9.4",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^26.6.0",
     "babel-loader": "8.1.0",
+    "babel-plugin-import": "^1.13.3",
     "babel-plugin-named-asset-import": "^0.3.7",
     "babel-preset-react-app": "^10.0.0",
     "bfj": "^7.0.2",
@@ -153,7 +154,17 @@
   "babel": {
     "presets": [
       "react-app"
-    ]
+    ],
+    "plugins": [
+			[
+				"import",
+				{
+					"style": "css",
+					"libraryDictory": "es",
+					"libraryName": "antd"
+				}
+			]
+		]
   },
   "devDependencies": {
     "node-sass": "npm:sass"
